--- a/.buffalo.dev.yml
+++ b/.buffalo.dev.yml
@@ -18,7 +18,7 @@ included_extensions:
 - .tmpl
 build_path: tmp
 build_delay: 200ns
-binary_name: buffalo-build
+binary_name: toodo-build
 command_flags: []
 enable_colors: true
-log_name: buffalo
+log_name: toodo
