--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "toodo",
+  "name": "coke",
   "version": "1.0.0",
-  "description": "## Documentation",
+  "description": "Thank you for chosing Buffalo for your web development needs.",
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,24 +10,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
+    "babel": "^6.23.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
     "bootstrap": "^3.3.7",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
-    "expose-loader": "^0.7.2",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.10.0",
+    "css-loader": "^0.27.3",
+    "expose-loader": "^0.7.3",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.1.1",
+    "jquery": "^3.2.0",
     "jquery-ujs": "^1.2.2",
-    "node-sass": "^4.4.0",
+    "node-sass": "^4.5.0",
     "npm-install-webpack-plugin": "^4.0.4",
     "path": "^0.12.7",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.14.0"
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.14.1",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.2.1"
   }
 }
