--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,36 +1,50 @@
 
-[[dependencies]]
-  branch = "development"
-  name = "github.com/gobuffalo/buffalo"
+# Gopkg.toml example
+#
+# Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
+# for detailed Gopkg.toml documentation.
+#
+# required = ["github.com/user/thing/cmd/thing"]
+# ignored = ["github.com/user/project/pkgX", "bitbucket.org/user/project/pkgA/pkgY"]
+#
+# [[constraint]]
+#   name = "github.com/user/project"
+#   version = "1.0.0"
+#
+# [[constraint]]
+#   name = "github.com/user/project2"
+#   branch = "dev"
+#   source = "github.com/myfork/project2"
+#
+# [[override]]
+#  name = "github.com/x/y"
+#  version = "2.4.0"
 
-[[dependencies]]
+
+[[constraint]]
+  name = "github.com/gobuffalo/buffalo"
+  version = "0.9.1"
+
+[[constraint]]
   branch = "master"
   name = "github.com/gobuffalo/envy"
 
-[[dependencies]]
+[[constraint]]
   branch = "master"
   name = "github.com/gobuffalo/packr"
 
-[[dependencies]]
+[[constraint]]
   branch = "master"
   name = "github.com/gobuffalo/suite"
 
-[[dependencies]]
-  branch = "master"
-  name = "github.com/markbates/going"
-
-[[dependencies]]
-  branch = "master"
-  name = "github.com/markbates/grift"
-
-[[dependencies]]
-  branch = "master"
+[[constraint]]
   name = "github.com/markbates/pop"
+  version = "3.25.3"
 
-[[dependencies]]
+[[constraint]]
   branch = "master"
   name = "github.com/markbates/validate"
 
-[[dependencies]]
-  branch = "master"
+[[constraint]]
   name = "github.com/satori/go.uuid"
+  version = "1.1.0"
