--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,58 +1,3 @@
-
-# Gopkg.toml example
-#
-# Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
-# for detailed Gopkg.toml documentation.
-#
-# required = ["github.com/user/thing/cmd/thing"]
-# ignored = ["github.com/user/project/pkgX", "bitbucket.org/user/project/pkgA/pkgY"]
-#
-# [[constraint]]
-#   name = "github.com/user/project"
-#   version = "1.0.0"
-#
-# [[constraint]]
-#   name = "github.com/user/project2"
-#   branch = "dev"
-#   source = "github.com/myfork/project2"
-#
-# [[override]]
-#  name = "github.com/x/y"
-#  version = "2.4.0"
-
-
 [[constraint]]
+  branch = "development"
   name = "github.com/gobuffalo/buffalo"
-  version = "0.9.3"
-
-[[constraint]]
-  name = "github.com/gobuffalo/envy"
-  version = "1.0.0"
-
-[[constraint]]
-  name = "github.com/gobuffalo/packr"
-  version = "1.0.0"
-
-[[constraint]]
-  branch = "master"
-  name = "github.com/gobuffalo/suite"
-
-[[constraint]]
-  branch = "master"
-  name = "github.com/markbates/going"
-
-[[constraint]]
-  branch = "master"
-  name = "github.com/markbates/grift"
-
-[[constraint]]
-  name = "github.com/markbates/pop"
-  version = "3.31.0"
-
-[[constraint]]
-  branch = "master"
-  name = "github.com/markbates/validate"
-
-[[constraint]]
-  name = "github.com/satori/go.uuid"
-  version = "1.1.0"
