--- a/.buffalo.dev.yml
+++ b/.buffalo.dev.yml
@@ -12,9 +12,10 @@ ignored_folders:
 - .sass-cache
 included_extensions:
 - .go
+- .env
 build_path: tmp
 build_delay: 200ns
 binary_name: toodo-build
 command_flags: []
 enable_colors: true
-log_name: toodo
+log_name: buffalo
