--- a/database.yml
+++ b/database.yml
@@ -1,10 +1,13 @@
 development:
-  dialect: "sqlite3"
-  database: {{env "GOPATH" }}/src/github.com/gobuffalo/toodo/toodo_development.sqlite
+  dialect: postgres
+  database: toodo_development
+  user: postgres
+  password: postgres
+  host: 127.0.0.1
+  pool: 5
 
 test:
-  dialect: "sqlite3"
-  database: {{env "GOPATH" }}/src/github.com/gobuffalo/toodo/toodo_test.sqlite
+  url: {{envOr "TEST_DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/toodo_test?sslmode=disable"}}
 
 production:
   url: {{envOr "DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/toodo_production?sslmode=disable"}}
