--- a/package.json
+++ b/package.json
@@ -1,34 +1,32 @@
 {
-  "name": "coke",
+  "name": "buffalo",
   "version": "1.0.0",
-  "description": "Thank you for chosing Buffalo for your web development needs.",
-  "main": "webpack.config.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "main": "index.js",
+  "license": "MIT",
   "dependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.5.1",
-    "bootstrap": "^3.3.7",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.27.3",
-    "expose-loader": "^0.7.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.1",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.2.0",
-    "jquery-ujs": "^1.2.2",
-    "node-sass": "^4.5.0",
-    "npm-install-webpack-plugin": "^4.0.4",
-    "path": "^0.12.7",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.14.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.2.1"
+    "babel-cli": "~6.24.1",
+    "babel-core": "~6.25.0",
+    "babel-loader": "~7.0.0",
+    "babel-preset-env": "~1.5.2",
+    "bootstrap-sass": "~3.3.7",
+    "clean-webpack-plugin": "~0.1.17",
+    "copy-webpack-plugin": "~4.0.1",
+    "css-loader": "~0.28.4",
+    "expose-loader": "~0.7.3",
+    "extract-text-webpack-plugin": "2.1.2",
+    "file-loader": "~0.11.2",
+    "font-awesome": "~4.7.0",
+    "gopherjs-loader": "^0.0.1",
+    "jquery": "~3.2.1",
+    "jquery-ujs": "~1.2.2",
+    "node-sass": "~4.5.3",
+    "npm-install-webpack-plugin": "4.0.4",
+    "path": "~0.12.7",
+    "sass-loader": "~6.0.5",
+    "style-loader": "~0.18.2",
+    "uglifyjs-webpack-plugin": "~0.4.6",
+    "url-loader": "~0.5.9",
+    "webpack": "~2.3.0",
+    "webpack-manifest-plugin": "~1.2.1"
   }
 }
