--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,15 +1,8 @@
 [[constraint]]
   name = "github.com/gobuffalo/buffalo"
-  branch = "development"
+  version = "v0.11.0"
 
 [prune]
   go-tests = true
   unused-packages = true
 
-[[constraint]]
-  name = "github.com/gobuffalo/suite"
-  version = "2.0.0"
-
-[[constraint]]
-  name = "github.com/gobuffalo/tags"
-  version = "2.0.0"
